[package]
name = "leptos_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = "0.7"
either = "1"
instant = "0.1"
futures = "0.3"
log = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["time"], default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
